--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="no">
   <head>
     <!-- Head = informasjon til nettleseren -->
-    <title>Hjem</title>
+    <title>Portfolio</title>
+    <link rel="icon" type="image/png" href="icons/Icon-home-google.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grechen+Fuemen&family=Snippet&display=swap" rel="stylesheet">
   </head>
 
   <body>
